--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,17 @@ FetchContent_MakeAvailable(wxWidgets)
 
 set(SRCS main.cpp)
 
-add_executable(main WIN32 ${SRCS})
+if(APPLE)
+    # create bundle on apple compiles
+    add_executable(main MACOSX_BUNDLE ${SRCS})
+
+    # Set a custom plist file for the app bundle - needed for Mac OS Retina display
+    set_target_properties(main PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist)
+else()
+    # the WIN32 is needed for Windows in order for it to look for WinMain
+    # instead of the main function. This is ignored on other systems,
+    # so it works on all platforms
+    add_executable(main WIN32 ${SRCS} main.exe.manifest)
+endif()
 
 target_link_libraries(main PRIVATE wxcore wxnet)
