--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.20 FATAL_ERROR)
 
 project(wx_cmake_fetchcontent_template LANGUAGES CXX)
 
@@ -7,16 +7,34 @@ include(FetchContent)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(wxBUILD_SHARED OFF)
+# wxWidgets
+set(wxWidgets_REQUIRED_VERSION "3.2.8")
+set(wxWidgets_REQUIRED_COMPONENTS core base gl)
 
-message(STATUS "Fetching wxWidgets...")
+find_package(wxWidgets ${wxWidgets_REQUIRED_VERSION} QUIET COMPONENTS ${wxWidgets_REQUIRED_COMPONENTS})
 
-FetchContent_Declare(
-   wxWidgets
-   GIT_REPOSITORY https://github.com/wxWidgets/wxWidgets.git
-   GIT_SHALLOW ON
-)
-FetchContent_MakeAvailable(wxWidgets)
+if(wxWidgets_FOUND)
+    message(STATUS "Found pre-installed wxWidgets") 
+    include(${wxWidgets_USE_FILE})
+	message(STATUS "-- libraries: ${wxWidgets_LIBRARIES}")
+else()
+    message(STATUS "wxWidgets ${wxWidgets_REQUIRED_VERSION}+ not found, fetching v${wxWidgets_REQUIRED_VERSION} from GitHub...")
+    
+    include(FetchContent)
+    set(wxBUILD_SHARED OFF)
+    
+    FetchContent_Declare(
+        wxWidgets
+        GIT_REPOSITORY https://github.com/wxWidgets/wxWidgets.git
+        GIT_TAG v${wxWidgets_REQUIRED_VERSION}
+    )
+    FetchContent_MakeAvailable(wxWidgets)
+
+    foreach(component ${wxWidgets_REQUIRED_COMPONENTS})
+        list(APPEND wxWidgets_LIBRARIES wx${component})
+    endforeach()
+endif()
+
 
 set(SRCS main.cpp)
 
@@ -33,4 +51,4 @@ else()
     add_executable(main WIN32 ${SRCS} main.exe.manifest)
 endif()
 
-target_link_libraries(main PRIVATE wxcore wxnet)
+target_link_libraries(main PRIVATE ${wxWidgets_LIBRARIES}) 
